--- a/journals/2022_08_21.md
+++ b/journals/2022_08_21.md
@@ -32,6 +32,17 @@
 			  ```
 			- [¿cómo usar python filter?](https://www.digitalocean.com/community/tutorials/how-to-use-the-python-filter-function-es)
 				- un list comprehension creará una nueva lista, que aumentará el tiempo de ejecución para ese procesamiento. Esto significa que una vez que nuestro list comprehension haya completado su expresión, tendremos dos listas en la memoria. Sin embargo,  `filter()`  creará un objeto simple que alberga una referencia a la lista original, la ==función proporcionada y un índice de dónde ir en la lista original==, lo que ocupa menos memoria.
+				- ```python
+				  def filterByKey(key, value, data):
+				      def filterData(x):
+				          for k, v in x.items():
+				              if (k == key.lower()) & (v == value.lower()):
+				                  return True
+				      return filter(filterData, data)
+				  
+				  def run():
+				      print(list(filterByKey("language", "python", DATA)))
+				  ```
 		- **Map**
 			- Los map no se pueden filtrar, la función es ==aplicada a cada uno== de los elementos del iterador.
 			- ```python
