change url images

--- a/journals/2022_08_27.md
+++ b/journals/2022_08_27.md
@@ -5,9 +5,9 @@
 	- Latex espacio y tres puntos #Extractos
 		- $1+2^4+3+1$ con ´\quad´ le damos un espacio $$1+\quad2^4\quad+3+1$
 		- ... $$\cdots$$
-		- colores latex ![image.png](../assets/image_1661638752019_0.png)
+		- **colores latex**
+		- "\text{\textcolor{Blue}{Se multiplica cada factor con el siguiente parentisis}} \\"
+		- ![](https://media.githubusercontent.com/media/nian-mejia/notas/master/assets/image_1661638752019_0.png){:height 432, :width 720}
 		- tipo:: [[Anotaciones]]
-		  posición:: pagina o minuto
 		  etiquetas:: cuadrado, espacio, numeros, latex
 		- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
--
