--- a/journals/2022_08_19.md
+++ b/journals/2022_08_19.md
@@ -29,4 +29,4 @@
 	  plataforma:: platzi
 	  tipo:: [[Curso]]
 	  url:: https://platzi.com/clases/2255-python-intermedio/
-	  estado:: [[En progreso]]
+	  estado:: [[Finalizado]]
