--- a/journals/2022_09_02.md
+++ b/journals/2022_09_02.md
@@ -21,3 +21,8 @@
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: try, expect, else, finally
 	- **Bibliografía**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
+- Nombres de los operadores lógicos disyunción y conjunción #Extractos
+	- {{{image-l image_1662150028428_0.png}}}
+	- tipo:: [[Anotaciones]]
+	  etiquetas:: operadores lógicos
+	- **Bibliografía**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
