--- a/journals/2022_09_04.md
+++ b/journals/2022_09_04.md
@@ -2,3 +2,62 @@
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: binomios, trinomios
 	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+- Formato de puntos de un gráfico en matplotlib #Extractos
+	- {{{image-l image_1662346514950_0.png}}}
+	- ```python
+	  plt.plot(x, y, "1")
+	  plt.show()
+	  ```
+	- | character | description |
+	  | ---- | ---- | ---- |
+	  | ‘.’ | point marker |
+	  | ‘,’ | pixel marker |
+	  | ‘o’ | circle marker |
+	  | ‘v’ | triangle_down marker |
+	  | ‘^’ | triangle_up marker |
+	  | ‘<’ | triangle_left marker |
+	  | ‘>’ | triangle_right marker |
+	  | ‘1’ | tri_down marker |
+	  | ‘2’ | tri_up marker |
+	  | ‘3’ | tri_left marker |
+	  | ‘4’ | tri_right marker |
+	  | ‘8’ | octagon marker |
+	  | ‘s’ | square marker |
+	  | ‘p’ | pentagon marker |
+	  | ‘P’ | plus (filled) marker |
+	  | ‘*’ | star marker |
+	  | ‘h’ | hexagon1 marker |
+	  | ‘H’ | hexagon2 marker |
+	  | ‘+’ | plus marker |
+	  | ‘x’ | x marker |
+	  | ‘X’ | x (filled) marker |
+	  | ‘D’ | diamond marker |
+	  | ‘d’ | thin_diamond marker |
+	  | <code>&#124;</code>| vline marker (pipe )|
+	  | ‘_’ | hline marker |
+	- ## Line Styles
+	  
+	  | character | description |
+	  | ---- | ---- | ---- |
+	  | ‘-’ | solid line style |
+	  | ‘–’ | dashed line style |
+	  | ‘-.’ | dash-dot line style |
+	  | ‘:’ | dotted line style |
+	- ## Colors
+	  
+	  | character | color |
+	  | ---- | ---- | ---- |
+	  | ‘b’ | blue |
+	  | ‘g’ | green |
+	  | ‘r’ | red |
+	  | ‘c’ | cyan |
+	  | ‘m’ | magenta |
+	  | ‘y’ | yellow |
+	  | ‘k’ | black |
+	  | ‘w’ | white |
+	- ```python
+	  subplot(nrows, ncols, index) #index es la posición donde quiero mi gráfica
+	  ```
+	- tipo:: [[Anotaciones]]
+	  etiquetas:: format graph, puntos, triangulos
+	- **Bibliografía**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
