change colors tags

--- a/journals/2022_08_15.md
+++ b/journals/2022_08_15.md
@@ -1,11 +1,11 @@
 - [[Teoría de conjuntos]] #Extractos*
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Matemáticas básicas, conjuntos
-	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 - [[Sistemas numéricos]] #Extractos
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Matemáticas básicas, sistemas numéricos
-	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 - ∀ es para todo elemento.
   id:: 62fae441-adb0-4b85-a0b6-46262099f10e
 - ∃ existe por lo menos un *x* tal que *P*(*x*) es verdadera
