--- a/journals/2022_08_18.md
+++ b/journals/2022_08_18.md
@@ -4,12 +4,12 @@
 	- Inteligencia artificial
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: que materias da el profesor de TIAcademia
-	- **Bibliografía**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
+	- **Bibliografia**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
 - IDE es Entorno de desarrollo integrado #Extractos
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: #IDE
-	- **Bibliografía**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
-- 👨‍🏫 Fundamentos de progamación #Bibliografía
+	- **Bibliografia**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
+- 👨‍🏫 Fundamentos de progamación #Bibliografia
   id:: 62fedd8f-fb92-430e-bd6d-49652c99c418
 	- autor:: Julio Moreno
 	  plataforma:: TiAcademia
