--- a/journals/2022_08_19.md
+++ b/journals/2022_08_19.md
@@ -1,7 +1,7 @@
 - [[Recta numérica, orden e intervalos]] #Extractos
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Recta numérica, orden, intervalos
-	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 - Formas de escribir y ó and #Extractos
 	- Y ó And $$\wedge$$
 	- tipo:: [[Anotaciones]]
@@ -22,8 +22,8 @@
 		  ```
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: pip
-	- **Bibliografía**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
-- 👨‍🏫 Python intermedio #Bibliografía
+	- **Bibliografia**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
+- 👨‍🏫 Python intermedio #Bibliografia
   id:: 62ff9df6-a287-4c64-84ae-ba1f652d24ab
 	- autor:: Facundo
 	  plataforma:: platzi
