--- a/journals/2022_08_23.md
+++ b/journals/2022_08_23.md
@@ -2,7 +2,7 @@
 	- Lección 18 ((63042c4a-0da9-4578-96cd-ff3bafcd12b4))
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Radicación, exponentes radicales
-	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 - Simbolo de raiz en latex #Extractos
 	- \sqrt[indice]{radicando} $$\sqrt[2]{9}$$
 	- tipo:: [[Anotaciones]]
