--- a/journals/2022_08_25.md
+++ b/journals/2022_08_25.md
@@ -6,12 +6,12 @@
 	- tipo:: [[Anotaciones]]
 	  posición:: Video 13
 	  etiquetas:: exceptions
-	- **Bibliografía**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
+	- **Bibliografia**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
 - Variables con nombres ==Mnemotécnicos== #Extractos
 	- Una **regla mnemotécnica** (en [griego](https://es.wikipedia.org/wiki/Idioma_griego): *μνήμης τέχνη* [mnēmēs tejnē] ‘técnica de memoria’) es una oración corta y fácil de recordar que ayuda de manera artificiosa a relacionar palabras, con el objetivo de [memorizar](https://es.wikipedia.org/wiki/Memorizaci%C3%B3n) conceptos con más facilidad.
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Unidad 2 video 2
-	- **Bibliografía**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
+	- **Bibliografia**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
 - Round  y Print#Extractos
 	- [Round doc python3](https://docs.python.org/3/library/functions.html#round)
 	- Si en la segunda posición de la función round, paso un número negativo, me redondea al númeromás cercano de la potencia de 10. Ejemplo:
@@ -28,4 +28,4 @@
 	- tipo:: [[Anotaciones]]
 	  posición::  Unidad 2 vídeo 4
 	  etiquetas:: round, python
-	- **Bibliografía**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
+	- **Bibliografia**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
