--- a/journals/2022_08_27.md
+++ b/journals/2022_08_27.md
@@ -1,7 +1,7 @@
 - [[Expresiones algebraicas: Polinomios]] #Extractos
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: polinomios
-	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 	- Latex espacio y tres puntos #Extractos
 		- $1+2^4+3+1$ con ´\quad´ le damos un espacio $$1+\quad2^4\quad+3+1$
 		- ... $$\cdots$$
@@ -10,6 +10,6 @@
 		- ![](https://media.githubusercontent.com/media/nian-mejia/notas/master/assets/image_1661638752019_0.png){:height 432, :width 720}
 		- tipo:: [[Anotaciones]]
 		  etiquetas:: cuadrado, espacio, numeros, latex
-		- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+		- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 -
 -
