--- a/journals/2022_08_28.md
+++ b/journals/2022_08_28.md
@@ -33,8 +33,8 @@
 		- [https://bibliotecas.unal.edu.co/sede-medellin/acerca-de/bibliotecas-en-la-sede](https://bibliotecas.unal.edu.co/sede-medellin/acerca-de/bibliotecas-en-la-sede)
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: números de contacto
-	- **Bibliografía**: ((630b895f-21d9-4229-b1f7-383057a70114))
-- 👨‍🏫Catedra de introducción a la vida universitaria #Bibliografía
+	- **Bibliografia**: ((630b895f-21d9-4229-b1f7-383057a70114))
+- 👨‍🏫Catedra de introducción a la vida universitaria #Bibliografia
   id:: 630b895f-21d9-4229-b1f7-383057a70114
 	- plataforma:: moodle
 	  tipo:: [[Curso]]
