--- a/journals/2022_09_02.md
+++ b/journals/2022_09_02.md
@@ -5,8 +5,8 @@
 	  ```
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: linspace
-	- **Bibliografía**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
-- 👨‍🏫 Curso Básico de Visualización de Datos con Matplotlib y Seaborn #Bibliografía
+	- **Bibliografia**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
+- 👨‍🏫 Curso Básico de Visualización de Datos con Matplotlib y Seaborn #Bibliografia
   id:: 6311ef40-3337-4e90-b664-2ed8dd208aee
 	- autor:: Carlos Alarcón
 	  plataforma:: platzi
@@ -20,9 +20,9 @@
 	  **FINALLY**: Se ejecuta SIEMPRE, haya sido lanzada la excepción o no haya sido lanzada.
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: try, expect, else, finally
-	- **Bibliografía**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
+	- **Bibliografia**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
 - Nombres de los operadores lógicos disyunción y conjunción #Extractos
 	- {{{image-l image_1662150028428_0.png}}}
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: operadores lógicos
-	- **Bibliografía**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
+	- **Bibliografia**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
