--- a/journals/2022_09_04.md
+++ b/journals/2022_09_04.md
@@ -1,7 +1,7 @@
 - [[Factorización]] #Extractos
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: binomios, trinomios
-	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 - Formato de puntos de un gráfico en matplotlib #Extractos
 	- {{{image-l image_1662346514950_0.png}}}
 	- ```python
@@ -60,4 +60,4 @@
 	  ```
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: format graph, puntos, triangulos
-	- **Bibliografía**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
+	- **Bibliografia**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
