--- a/journals/2022_09_08.md
+++ b/journals/2022_09_08.md
@@ -38,6 +38,6 @@
 	  ```
 	- tipo::  [[Anotaciones]]
 	  etiquetas:: Orientado a objetos
-	- **Bibliografía**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
+	- **Bibliografia**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
 -
 -
