--- a/journals/2022_08_14.md
+++ b/journals/2022_08_14.md
@@ -1,4 +1,4 @@
-- 👨‍🏫 Licencia de conducción #Bibliografía
+- 👨‍🏫 Licencia de conducción #Bibliografia
   id:: 62f9055e-f4da-4262-b501-df08a7d6519a
 	- autor:: Santiago 
 	  plataforma:: CEA Autonorte
@@ -8,8 +8,8 @@
 	- [[Preguntas y respuestas del examen]]
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Licencia, Examen de conducción
-	- **Bibliografía**: ((62f9055e-f4da-4262-b501-df08a7d6519a))
-- 👨‍🏫 Matemáticas básicas #Bibliografía
+	- **Bibliografia**: ((62f9055e-f4da-4262-b501-df08a7d6519a))
+- 👨‍🏫 Matemáticas básicas #Bibliografia
   id:: 62f97366-eadb-47a9-be54-a0e0f72c170b
 	- autor:: Profesor Duver
 	  plataforma:: Universidad Nacional de Colombia
