--- a/journals/2022_08_30.md
+++ b/journals/2022_08_30.md
@@ -5,4 +5,4 @@
 	  ```
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: assert
-	- **Bibliografía**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
+	- **Bibliografia**: ((62ff9df6-a287-4c64-84ae-ba1f652d24ab))
