--- a/journals/2022_09_10.md
+++ b/journals/2022_09_10.md
@@ -16,4 +16,4 @@
 	- tipo:: [[Anotaciones]]
 	  posición:: pagina o minuto
 	  etiquetas:: numeral etiqueta
-	- **Bibliografía**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
