--- a/journals/2022_09_11.md
+++ b/journals/2022_09_11.md
@@ -2,4 +2,25 @@
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: créditos, papa, calidad de estudiante
 	- **Bibliografia**: ((630b895f-21d9-4229-b1f7-383057a70114))
--
+- Expresiones Fraccionarias, Fracciones Compuestas y Racionalización #Extractos
+	- Expresiones fraccionarias ó Fracción al cociente de dos expresiones algebraicas
+		- Si en una expresión fraccionaria el ==numerador y el denominador son polinomios==, la expresión se llama expresión racional
+		- $$\dfrac{5x^{2}}{x+2}\quad \text{ y }\quad\dfrac{7x^{3}+2x^{2}-x+1}{4x^{4}+2x^{2}+1}$$
+	- **Operaciones con fracciones:**
+		- ### Simplificar
+		- Al fatorizar el numerador y el denominador, luego aplicamos la siguiente propiedad $$\frac{AC}{BC} = \frac{A}{B}$$
+		- $$
+		  \dfrac{x^{2}-x-2}{x^{2}-1}=\dfrac{\left( x-2\right) \left( x+1\right) }{\left( x-1\right) \left( x+1\right) }=\dfrac{x-2}{x-1}$$
+	- ### 2. Suma, resta, multiplicación y división
+		- **Nota**: Para obtener el mı́nimo común denominador (MCD), factorizamos los denominadores y el MCD es el producto de los factores comunes y no comunes con el mayor exponente
+		- $$\frac{2}{x+3} - \frac{1}{x^2+7x+12}\\ \text{}\\
+		  \frac{2}{x+3} - \frac{1}{(x+4)(x+3)}\\ \text{}\\
+		  \frac{2(x+4)-1}{(x+4)(x+3)}\\ \text{}\\
+		  \frac{2x+8-1}{(x+4)(x+3)}\\ \text{}\\
+		  \frac{2x-7}{(x+4)(x+3)}
+		  $$
+		- ==Tener en cuenta estos errores comunes==
+		- {{{image-l image_1662942283953_0.png}}}
+	- tipo:: [[Anotaciones]]
+	  etiquetas:: Expresiones Fraccionarias, Fracciones Compuestas y Racionalización
+	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
