--- a/journals/2022_09_04.md
+++ b/journals/2022_09_04.md
@@ -3,7 +3,7 @@
 	  etiquetas:: binomios, trinomios
 	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 - Formato de puntos de un gráfico en matplotlib #Extractos
-	- {{{image-l image_1662346514950_0.png}}}
+	- {{{image-l image_1662346514950_0.png, 300, 300}}}
 	- ```python
 	  plt.plot(x, y, "1")
 	  plt.show()
