--- a/journals/2022_09_08.md
+++ b/journals/2022_09_08.md
@@ -4,7 +4,7 @@
 	- **Axes** Son las gráficas que se van a pintar
 		- **parametros** : [pos eje x, pos eje y, size graph eje x, size graph eje y]
 		- sirve para darle color de background a un axes `set_facecolor`
-		- {{{image-l image_1662674767896_0.png}}}
+		- {{{image-l image_1662674767896_0.png, 300, 300}}}
 		- ```python
 		  fig = plt.figure()
 		  axes_1 = fig.add_axes([0.1, 0.1, 0.8, 1])
