--- a/journals/2022_09_11.md
+++ b/journals/2022_09_11.md
@@ -20,7 +20,11 @@
 		  \frac{2x-7}{(x+4)(x+3)}
 		  $$
 		- ==Tener en cuenta estos errores comunes==
-		- {{{image-l image_1662942283953_0.png}}}
+		- {{{image-l image_1662942283953_0.png, 300, 300}}}
+	- ### Fracciones compuestas
+		- Son fracciones donde en el numerador o en el denominador tiene otras fracciones
+	- ## Racionalización
+	- {{{image-l image_1662942283953_0.png, 300, 300}}}
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Expresiones Fraccionarias, Fracciones Compuestas y Racionalización
 	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
