--- a/journals/2022_09_11.md
+++ b/journals/2022_09_11.md
@@ -1,4 +1,4 @@
-- [[Marco normativo, rendimiento académico y estructura organizacional]] #Extractos
+- [[Creditos]] #Extractos
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: créditos, papa, calidad de estudiante
 	- **Bibliografia**: ((630b895f-21d9-4229-b1f7-383057a70114))
@@ -23,7 +23,6 @@
 		- {{{image-l image_1662942283953_0.png, 300, 300}}}
 	- ### Fracciones compuestas
 		- Son fracciones donde en el numerador o en el denominador tiene otras fracciones
-	- ## Racionalización
 	-
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: Expresiones Fraccionarias, Fracciones Compuestas y Racionalización
