--- a/journals/2022_09_16.md
+++ b/journals/2022_09_16.md
@@ -15,5 +15,5 @@
 	  plt.boxplot(data, vert=True, patch_artist=True, showfliers=False)
 	  ```
 	- tipo:: [[Anotaciones]]
-	  etiquetas:: bar
+	  etiquetas:: bar, boxplot, hist
 	- **Bibliografia**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
