--- a/journals/2022_09_19.md
+++ b/journals/2022_09_19.md
@@ -1,4 +1,4 @@
-- Escriba aquí lo que quiera anotar sobre el tema #Extractos
+- Seaborn distribution plots #Extractos
 	- SET [doc set_theme seaborn](https://seaborn.pydata.org/generated/seaborn.set_theme.html#seaborn.set_theme)
 		- Este parámetro afecta a todas las gráficas que creamos, incluidas las que no usan Seaborn.
 		- Podemos resetear los valores utilizando el método reset_orig.
@@ -8,7 +8,31 @@
 		  sns.barplot(x=["A", "B", "C"], y=[1,3,2])
 		  plt.show()
 		  ```
-		- {{{image-l image_1663642854235_0.png, 300, 300}}}
+		- {{{image-l image_1663642854235_0.png, 600, 800}}}
+	- https://static.platzi.com/media/user_upload/0_Cfo6qfxirL4STHTY1-009be1e6-1957-46f6-9e45-80dc1d41a0d4.jpg
+	- ## Tipos de gráfica
+		- **Relplot (relacional):** scatterplot, lineplot.
+		- **Displot (distribuciones):** histplot, kdeplot, ecdfplot, rugplot.
+		- **Catplot (categorica):** stripplot, swamplot, boxplot, violinplot, pointplot, barplot.
+	- ## Displot
+		- Con displot se pasan los parametos y la función decide cuál es la mejor gráfica para los datos.
+		- ```python
+		  sns.displot(data=tips, x="total_bill")
+		  sns.displot(data=tips, x="total_bill", y="tip", hue="sex")
+		  sns.displot(data=tips, x="total_bill", hue="sex", kind="kde")
+		  ```
+		- ==HUE== agrupa la gráfica por la columna
+		- ==Kind== elige el tipo de gráfica a usar
+		- Guardar gráfica como imagen con savefig
+		- stat permite hace la gráfica dependiendo si es por conteo, frecuencia, porcentaje o probabilidad
+		- multiple permite elegir que tipo de gráfica es el que quiero, si stack o dodge
+		- ```python
+		  sns.displot(data=tips, x="tip", hue="sex", stat="percent", multiple="stack")
+		  sns.set(style="ticks", palette="CMRmap")
+		  plt.show()
+		  plt.savefig(“name.png”)
+		  ```
+		-
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: sns, seaborn, set
 	- **Bibliografia**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
