--- a/journals/2022_09_20.md
+++ b/journals/2022_09_20.md
@@ -3,3 +3,19 @@
 	  posición:: pagina o minuto
 	  etiquetas:: numeral etiqueta
 	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
+- Gráficas categóricas y de dispersión #Extractos
+	- [categorical graph seaborn](https://seaborn.pydata.org/tutorial/categorical.html)
+	- ```python
+	  sns.catplot(data= tips, x= 'day', y = 'total_bill', hue= 'sex', dodge=True, kind= 'box', col= 'time');
+	  ```
+	- ### Gráficas de relación
+	- El ==style== diferencia los puntos dependiendo de la variable
+	- ((6329dbb8-f46e-4478-9840-9c4298c4b22a))
+	- ```python
+	  sns.scatterplot(data=tips, x="total_bill", y="tip", hue="day", style="time", size="size")
+	  plt.legend(loc="center", bbox_to_anchor=(1.12, 0.5))
+	  plt.show()
+	  ```
+	- tipo:: [[Anotaciones]]
+	  etiquetas:: categoric plot
+	- **Bibliografia**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
