--- a/journals/2022_09_20.md
+++ b/journals/2022_09_20.md
@@ -1,7 +1,6 @@
 - [[Ecuaciones]] #Extractos
 	- tipo:: [[Anotaciones]]
-	  posición:: pagina o minuto
-	  etiquetas:: numeral etiqueta
+	  etiquetas:: ecuaciones lineales y cuadráticas
 	- **Bibliografia**: ((62f97366-eadb-47a9-be54-a0e0f72c170b))
 - Gráficas categóricas y de dispersión #Extractos
 	- [categorical graph seaborn](https://seaborn.pydata.org/tutorial/categorical.html)
