curso de visualización

--- a/journals/2022_08_14.md
+++ b/journals/2022_08_14.md
@@ -3,7 +3,7 @@
 	- autor:: Santiago 
 	  plataforma:: CEA Autonorte
 	  tipo:: [[Curso]]
-	  estado:: [[En progreso]]
+	  estado:: [[Finalizado]]
 - Preguntas sobre el examen de conducción #Extractos
 	- [[Preguntas y respuestas del examen]]
 	- tipo:: [[Anotaciones]]
