--- a/journals/2022_09_02.md
+++ b/journals/2022_09_02.md
@@ -12,7 +12,7 @@
 	  plataforma:: platzi
 	  tipo:: [[Curso]]
 	  url:: https://platzi.com/clases/2913-matplotlib-seaborn/47938-pyplot-basico/
-	  estado::  [[En progreso]]
+	  estado:: [[Finalizado]]
 - ### Manejo de excepciones #Extractos
 	- **TRY**: En el try se coloca código que esperamos que pueda lanzar algún error.
 	  **EXCEPT**: En el except se maneja el error, es decir, si ocurre un error dentro del bloque de código del try, se deja de ejecutar el código del try y se ejecuta lo que se haya definido en el Except.
