curso de funciones matemáticas

--- a/journals/2022_08_14.md
+++ b/journals/2022_08_14.md
@@ -15,4 +15,4 @@
 	  plataforma:: Universidad Nacional de Colombia
 	  tipo:: [[Curso]]
 	  url:: https://unvirtual.medellin.unal.edu.co/course/view.php?id=293&section=0
-	  estado::  [[En progreso]]
+	  estado:: [[CANCELED]]
