--- a/journals/2022_08_18.md
+++ b/journals/2022_08_18.md
@@ -11,11 +11,11 @@
 	- **Bibliografia**: ((62fedd8f-fb92-430e-bd6d-49652c99c418))
 - 👨‍🏫 Fundamentos de progamación #Bibliografia
   id:: 62fedd8f-fb92-430e-bd6d-49652c99c418
-	- autor:: Julio Moreno
+	- id:: 6311ef40-c741-4928-b3c8-bc91d01d4fd8
+	  autor:: Julio Moreno
 	  plataforma:: TiAcademia
 	  tipo:: [[Curso]]
 	  url:: [link](https://ticademia.com/curso/236/modulo/572)
-	  estado:: [[En progreso]]
-	  id:: 6311ef40-c741-4928-b3c8-bc91d01d4fd8
+	  estado:: [[CANCELLED]]
 -
 -
