--- a/journals/2022_08_28.md
+++ b/journals/2022_08_28.md
@@ -38,4 +38,4 @@
   id:: 630b895f-21d9-4229-b1f7-383057a70114
 	- plataforma:: moodle
 	  tipo:: [[Curso]]
-	  estado::  [[En progreso]]
+	  estado:: [[CANCELLED]]
