--- a/journals/2022_09_19.md
+++ b/journals/2022_09_19.md
@@ -16,11 +16,9 @@
 		- **Catplot (categorica):** stripplot, swamplot, boxplot, violinplot, pointplot, barplot.
 	- ## Displot
 		- Con displot se pasan los parametos y la función decide cuál es la mejor gráfica para los datos.
-		- ```python
-		  sns.displot(data=tips, x="total_bill")
+		- sns.displot(data=tips, x="total_bill")
 		  sns.displot(data=tips, x="total_bill", y="tip", hue="sex")
 		  sns.displot(data=tips, x="total_bill", hue="sex", kind="kde")
-		  ```
 		- ==HUE== agrupa la gráfica por la columna
 		- ==Kind== elige el tipo de gráfica a usar
 		- Guardar gráfica como imagen con savefig
