--- a/journals/2022_09_21.md
+++ b/journals/2022_09_21.md
@@ -2,8 +2,8 @@
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: experimentos, buenas practicas
 	- **Bibliografia**:
-- TODO  https://peps.python.org/pep-0008/
-- TODO https://realpython.com/python-pep8/
+- DONE  https://peps.python.org/pep-0008/
+- DONE https://realpython.com/python-pep8/
 - Pairplot  y headmap #Extractos
 	- Con corner en True se muestra solo una parte del pairplot
 	- ```python
