add note perceptron

--- a/journals/2022_10_04.md
+++ b/journals/2022_10_04.md
@@ -1,4 +1,4 @@
-- El perceptrón #Extractos
+- ## El perceptrón #Extractos
 	- Es la forma como se define una neurona artificial
 	- ![image.png](../assets/image_1664882083395_0.png){:height 262, :width 304}
 	- ![image.png](../assets/image_1664882163333_0.png){:height 347, :width 529}
@@ -8,6 +8,8 @@
 	- Una función de activación le da una forma no lineal
 	- TODO [the-perceptron_ca283e9f-bd76-4564-9309-0a50877d4c35.pdf (platzi.com)](https://static.platzi.com/media/public/uploads/the-perceptron_ca283e9f-bd76-4564-9309-0a50877d4c35.pdf)
 	- ![image.png](../assets/image_1664883883586_0.png)
+	- [[Paper perceptron]]
+	- ![Algebra línear](../assets/linalg_notes_1665141657242_0.pdf)
 	- tipo:: [[Anotaciones]] 
 	  etiquetas:: percentron
 	- **Bibliografia**: ((63341570-c3fe-4a2b-96db-39e0745bea6e))
