calculando el error

--- a/journals/2022_09_29.md
+++ b/journals/2022_09_29.md
@@ -1,1 +1,1 @@
-- TODO [https://ellibrodepython.com/programacion-orientada-a-objetos](https://ellibrodepython.com/programacion-orientada-a-objetos)
+- DONE [https://ellibrodepython.com/programacion-orientada-a-objetos](https://ellibrodepython.com/programacion-orientada-a-objetos)
