--- a/journals/2022_10_04.md
+++ b/journals/2022_10_04.md
@@ -6,9 +6,15 @@
 	- Los pesos son que tan importante es esa característica
 	- Una combinación lineal, es multiplicar varias señales de entrada y luego sumarlas
 	- Una función de activación le da una forma no lineal
-	- TODO [the-perceptron_ca283e9f-bd76-4564-9309-0a50877d4c35.pdf (platzi.com)](https://static.platzi.com/media/public/uploads/the-perceptron_ca283e9f-bd76-4564-9309-0a50877d4c35.pdf)
+	- DONE [the-perceptron_ca283e9f-bd76-4564-9309-0a50877d4c35.pdf (platzi.com)](https://static.platzi.com/media/public/uploads/the-perceptron_ca283e9f-bd76-4564-9309-0a50877d4c35.pdf)
+	  :LOGBOOK:
+	  CLOCK: [2022-10-09 Sun 14:50:26]--[2022-10-09 Sun 14:50:26] =>  00:00:00
+	  CLOCK: [2022-10-09 Sun 14:50:27]--[2022-10-09 Sun 14:50:27] =>  00:00:00
+	  CLOCK: [2022-10-09 Sun 14:50:28]--[2022-10-09 Sun 14:50:28] =>  00:00:00
+	  CLOCK: [2022-10-09 Sun 14:50:29]--[2022-10-09 Sun 14:50:29] =>  00:00:00
+	  :END:
 	- ![image.png](../assets/image_1664883883586_0.png)
-	- [[Paper perceptron]]
+	- [[ML perceptron]]
 	- ![Algebra línear](../assets/linalg_notes_1665141657242_0.pdf)
 	- tipo:: [[Anotaciones]] 
 	  etiquetas:: percentron
