--- a/journals/2022_09_28.md
+++ b/journals/2022_09_28.md
@@ -8,6 +8,6 @@
 	  plataforma:: platzi
 	  tipo:: [[Curso]]
 	  url:: https://platzi.com/clases/2701-funciones-matematicas/
-	  estado::  [[En progreso]]
+	  estado:: [[Finalizado]]
 - TODO [Gradient Descent — ML Glossary documentation (ml-cheatsheet.readthedocs.io)](https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html#:~:text=Gradient%20descent%20is%20an%20optimization,the%20parameters%20of%20our%20model)
 -
