add info to logset

--- a/journals/2022_09_16.md
+++ b/journals/2022_09_16.md
@@ -5,15 +5,13 @@
 	- **barh** es un grafico de barras horizontales|
 	- **histtype** define el tipo de gráfica, con el valor step la gráfica queda en fondo blanco
 	- **patch_artist** diferencia los colores de los datos y la mediana
-	- ```python
-	  plt.bar(country, population, width)
+	- plt.bar(country, population, width)
 	  plt.xticks(np.arange(5), [f"at_{i}" for i in np.arange(0, 25, 5)], rotation=45)
 	  plt.barh(country, population, width)
 	  
 	  plt.hist(data, bins=20, histtype="step")
 	  
 	  plt.boxplot(data, vert=True, patch_artist=True, showfliers=False)
-	  ```
 	- tipo:: [[Anotaciones]]
 	  etiquetas:: bar, boxplot, hist
 	- **Bibliografia**: ((6311ef40-3337-4e90-b664-2ed8dd208aee))
