--- a/journals/2022_09_26.md
+++ b/journals/2022_09_26.md
@@ -10,5 +10,5 @@
   CLOCK: [2022-09-28 Wed 04:35:00]--[2022-09-28 Wed 04:35:02] =>  00:00:02
   CLOCK: [2022-09-28 Wed 04:35:03]--[2022-09-28 Wed 04:35:05] =>  00:00:02
   :END:
-- TODO  https://google.github.io/eng-practices/review/reviewer/looking-for.html
+- DONE  https://google.github.io/eng-practices/review/reviewer/looking-for.html
 -
