--- a/journals/2022_10_14.md
+++ b/journals/2022_10_14.md
@@ -1,1 +1,9 @@
+- ## Proporción y razón #Extractos
+	- ==Razón== Es la relación entre dos variables diferentes y no se contienen la una a la otra
+		- `Razón hombre a mujer = 68/77= 0,883   88,3%. El 88,3% de los hombres con respecto de las mujeres no fuman.`
+	- ==Proporción== Es la relación entre dos variables del mismo tipo
+		- Proporción de mujeres fumadoras = $\frac{53}{75 + 53}$ = \frac{53}{128} = 0,414   41,4%. Significa que hay 0,414 mujeres fumadoras con respecto al total o del total, el 41,4% son mujeres fumadora
+	- tipo:: [[Anotaciones]] 
+	  etiquetas:: proporción y razón
+	- **Bibliografia**: ((6346e926-ef67-4716-bdea-e85c219631d8))
 -
