medidas de tendencia central

--- a/journals/2022_09_08.md
+++ b/journals/2022_09_08.md
@@ -36,6 +36,7 @@
 	  ax1.set_xlabel("X")
 	  ax1.set_ylabel("Y")
 	  ax1.legend(loc="lower left", bbox_to_anchor=(0.5, 0.2))
+	  fig.suptitle('Main title') #super title
 	  ```
 	- tipo::  [[Anotaciones]]
 	  etiquetas:: Orientado a objetos
