--- a/journals/2022_10_20.md
+++ b/journals/2022_10_20.md
@@ -40,3 +40,19 @@
 	  tipo:: [[Curso]]
 	  url:: [Introducción a la neurociencia del feedback - Platzi](https://platzi.com/clases/2481-neurociencia-feedback/41342-introduccion-a-la-neurociencia-del-feedback/)
 	  estado:: [[Finalizado]]
+- ## Pipelines de procesamiento numérico #Extractos
+	- ## Escalamiento linear
+		- Los modelos de machine learning son eficientes en datos con números de [-1, 1]
+		- El escalamiento linear se usa en la distribución normal.
+		- ## Tipos de escalamientos
+			- #### Min-max
+				- $$x_{s} = \frac{\text{2x - min - max}}{max - min}$$
+			- #### Método de clipping
+				- Se encarga de tomar el min y max se pueden usar la los percentiles
+				- Todos los datos que queden por fuera, se fuerzan al limite más cercano
+			- ### Z-score
+				- $$x_{s} = \frac{x - \bar{x} }{\sigma}$$
+		- TODO https://developers.google.com/machine-learning/data-prep/transform/normalization
+	- tipo:: [[Anotaciones]] 
+	  etiquetas:: Pipelines de procesamiento numérico
+	- **Bibliografia**: ((63453abf-53f3-4072-88e2-b3a76a505bc6))
