normalización de datos numéricos

--- a/journals/2022_10_12.md
+++ b/journals/2022_10_12.md
@@ -17,4 +17,4 @@
 	- autor:: Jesús elias Aguilar
 	  tipo:: [[Libro]]
 	  url:: [Ebooks7-24 (sena.edu.co)](https://www-ebooks7-24-com.bdigital.sena.edu.co/stage.aspx?il=15156&pg=18&ed=)
-	  estado:: [[En progreso]]
+	  estado:: [[Finalizado]]
