--- a/journals/2022_10_20.md
+++ b/journals/2022_10_20.md
@@ -45,14 +45,25 @@
 		- Los modelos de machine learning son eficientes en datos con números de [-1, 1]
 		- El escalamiento linear se usa en la distribución normal.
 		- ## Tipos de escalamientos
-			- #### Min-max
+			- #### Min-max o scaling to range
 				- $$x_{s} = \frac{\text{2x - min - max}}{max - min}$$
+				- **Condiciones**:
+					- Los datos están distribuidos uniformemente
+					- Conoces los limites de los datos con ==pocos o sin outliers==
 			- #### Método de clipping
 				- Se encarga de tomar el min y max se pueden usar la los percentiles
 				- Todos los datos que queden por fuera, se fuerzan al limite más cercano
+				- ![image.png](../assets/image_1666566367907_0.png)
+			- ### Log scaling ==(No lineal)==
+				- $$x' = log(x)$$
+				- Es útil cuando una parte de los datos tiene tiene muchos puntos y otra parte no tiene
+				- ![image.png](../assets/image_1666566851831_0.png)
 			- ### Z-score
 				- $$x_{s} = \frac{x - \bar{x} }{\sigma}$$
-		- TODO https://developers.google.com/machine-learning/data-prep/transform/normalization
+				- Se usa cuando no hay muchos outliers
+		- Resumen
+			- ![image.png](../assets/image_1666566993292_0.png)
+		- DONE https://developers.google.com/machine-learning/data-prep/transform/normalization
 	- tipo:: [[Anotaciones]] 
 	  etiquetas:: Pipelines de procesamiento numérico
 	- **Bibliografia**: ((63453abf-53f3-4072-88e2-b3a76a505bc6))
