add musical teory

--- a/journals/2022_10_20.md
+++ b/journals/2022_10_20.md
@@ -56,7 +56,8 @@
 				- ![image.png](../assets/image_1666566367907_0.png)
 			- ### Log scaling ==(No lineal)==
 				- $$x' = log(x)$$
-				- Es útil cuando una parte de los datos tiene tiene muchos puntos y otra parte no tiene
+				- Comprimir un rango amplio en un rango estrecho
+				- Es útil cuando una parte de los datos tiene  muchos puntos y otra parte no tiene
 				- ![image.png](../assets/image_1666566851831_0.png)
 			- ### Z-score
 				- $$x_{s} = \frac{x - \bar{x} }{\sigma}$$
