--- a/journals/2022_09_08.md
+++ b/journals/2022_09_08.md
@@ -30,6 +30,7 @@
 	- Los labels son las explicaciones que puede tener mi gráfica y también es necesario agregar la función ==legend== para poder mostrarlo
 		- ==Loc== nos permite decidir en que parte deseo poner la legenda y con ==bbox_to_anchor== podemos definir en que posición x, y de la gráfica deseo poner el gráfico
 		  id:: 6329dbb8-f46e-4478-9840-9c4298c4b22a
+		- Función ==sharex== permite compartir un eje en las gráficas
 	- ```python
 	  ax1.plot(x, y, label="sin(x)")
 	  ax1.set_title("Relación x - y")
