--- a/journals/2022_10_11.md
+++ b/journals/2022_10_11.md
@@ -12,4 +12,4 @@
 	  plataforma:: Platzi
 	  tipo:: [[Curso]]
 	  url:: [Estadística descriptiva vs. inferencial - Platzi](https://platzi.com/clases/2353-estadistica-descriptiva/38392-estadistica-descriptiva-vs-inferencial/?notification_id=3079018)
-	  estado:: [[En progreso]]
+	  estado:: [[Finalizado]]
