countable and uncountable

--- a/journals/2022_11_29.md
+++ b/journals/2022_11_29.md
@@ -7,6 +7,7 @@
 		- And money is thought-out as all types of coins in the world
 	- I have many friends <- Positive
 	- I have ==too many== friends <- negative
+	- I have ==too much== work to do <- No se puede decir solo much es incorrecto
 	- tipo:: [[Anotaciones]] 
 	  posición:: video 2
 	  etiquetas:: Countable and uncountable
